// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App React component Matches snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <h1
        className="App-title"
      >
        Welcome to the Alluxio Shared Web Application
      </h1>
    </header>
    <div
      className="App-intro"
    >
      This package contains reusable components for other web applications. It is not meant to be viewed via a web browser.
    </div>
  </div>
</App>
`;

exports[`App Shallow component Matches snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Welcome to the Alluxio Shared Web Application
    </h1>
  </header>
  <div
    className="App-intro"
  >
    This package contains reusable components for other web applications. It is not meant to be viewed via a web browser.
  </div>
</div>
`;
